--- a/package.json
+++ b/package.json
@@ -9,22 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.85.1",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@types/socket.io-client": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4"
   }
 }
